# candybar

./: .gitignore  .uncrustify.cfg  CONTRIBUTING.asciidoc  Gruntfile.js  LICENSE  Makefile  Makefile.am  README.asciidoc  README.rst  config.def.json  config.json  configure.ac  package.json  statusline  webkit-04.html  webkitwindow  wscript
app/assets/js/: main.js
app/assets/styl/: main.styl
app/views/: index.jade
docs/: .gitignore  CONTRIBUTING.asciidoc  INSTALL.asciidoc  INSTALL.rst  candybar.1  candybar.1.asciidoc  candybar.5  candybar.5.asciidoc  wkline.1  wkline.1.asciidoc  wkline.5  wkline.5.asciidoc
scripts/: wkline  wkline-daemon  wkline-launcher  wkline-ndaemon  wkline-test
src/: .gitignore  Makefile  Makefile.am  candybar.c  candybar.h  config.h  config.json  widgets.c  widgets.h  wkline.c  wkline.h
src/lib/: curl.c  curl.h
src/util/: config.c  config.h  copy_prop.c  curl.c  curl.h  dbus_helpers.c  dbus_helpers.h  gdk_helpers.c  gdk_helpers.h  log.c  log.h  process.c  process.h  wkconfig.c
src/widgets/: battery.c  battery.h  datetime.c  datetime.h  desktops.c  desktops.h  desktops_i3.c  desktops_i3.h  email_imap.c  email_imap.h  external_ip.c  external_ip.h  free_space.c  free_space.h  magick_background.c  magick_background.h  notifications.c  notifications.h  now_playing_mpd.c  now_playing_mpd.h  now_playing_mpris.c  now_playing_mpris.h  volume.c  volume.h  weather.c  weather.h  widgets.c  widgets.h  window_title.c  window_title.h
util/: config.c  copy_prop.c  copy_prop.h  curl.h  dbus_helpers.c  load_config.c  load_config.h  log.c  log.h
